--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,147 @@
+<!--Autore: Robert Dache-->
+<!--IMPORTANTE:  Per funzionare serve che vada in live, quindi con browser-sync o altro simile-->
 <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="author" content="Robert Dache">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello coursera</title>
+	<title>Ristorante Cinese rob</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,700;1,400&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<h1>ciao come va</h1>
+	
+	
+	<header>
+		<nav id="header-nav" class="navbar navbar-default">
+			<div class="container">
+				<div class="navbar-header">
+					<a href="index.html" class="pull-left visible-md visible-lg">
+					<div id="logo-img" alt="Logo immagine"></div>
+					</a>
+
+					<div class="navbar-brand"> 
+						<a href="index.html"><h1>Ristorante cinese di Rob</h1></a>
+						<p>
+							<img src="immagini/star-k-logo.png" alt="certificato">
+							<span>Kosher Certified</span>
+						</p>
+					</div>
+					
+					<button id="" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					  </button>
+				</div>	
+				<div id="collapsable-nav" class="collapse navbar-collapse">
+					<ul id="nav-list" class="nav navbar-nav navbar-right">
+					 <li id="navHomeButton" class="visible-xs active">
+							<a href="index.html">
+								<span>
+								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-fill" viewBox="0 0 16 16">
+									<path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L8 2.207l6.646 6.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5Z"/>
+									<path d="m8 3.293 6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6Z"/>
+								</svg>
+							</span><br class="hidden-xs">  Home</a>
+						  </li>
+						  <li id="navMenuButton">
+							<a href="#" onclick="$dc.loadMenuCategories();">
+						<span>
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-fill" viewBox="0 0 16 16">
+							<path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5h3Z"/>
+							<path d="M3.5 1h.585A1.498 1.498 0 0 0 4 1.5V2a1.5 1.5 0 0 0 1.5 1.5h5A1.5 1.5 0 0 0 12 2v-.5c0-.175-.03-.344-.085-.5h.585A1.5 1.5 0 0 1 14 2.5v12a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 14.5v-12A1.5 1.5 0 0 1 3.5 1Z"/>  
+						</svg>
+					</span>  
+					<br class="hidden-xs"> Menù</a>
+					 </li>
+					 <li href="#" onclick="$dc.info();">
+					   <a href="#">
+					<span>
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
+							<path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412-1 4.705c-.07.34.029.533.304.533.194 0 .487-.07.686-.246l-.088.416c-.287.346-.92.598-1.465.598-.703 0-1.002-.422-.808-1.319l.738-3.468c.064-.293.006-.399-.287-.47l-.451-.081.082-.381 2.29-.287zM8 5.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"/>
+						</svg>
+					</span>  <br class="hidden-xs"> About</a>
+						
+					 </li>
+					 <li>
+					   <a href="#" onclick="$dc.premi();">
+					<span>  
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-award-fill" viewBox="0 0 16 16">
+							<path d="m8 0 1.669.864 1.858.282.842 1.68 1.337 1.32L13.4 6l.306 1.854-1.337 1.32-.842 1.68-1.858.282L8 12l-1.669-.864-1.858-.282-.842-1.68-1.337-1.32L2.6 6l-.306-1.854 1.337-1.32.842-1.68L6.331.864 8 0z"></path>
+							<path d="M4 11.794V16l4-1 4 1v-4.206l-2.018.306L8 13.126 6.018 12.1 4 11.794z"></path>
+						  </svg>
+						</span>  
+						<br class="hidden-xs"> Premi</a>
+					 </li>
+					 <li id="phone" class="hidden-xs">
+					   <a href="tel:410-602-5008">
+						 <span>410-602-5008</span></a><div>* Spediamo</div>
+					 </li>
+				   </ul><!-- #nav-list -->
+				 </div><!-- .collapse .navbar-collapse -->
+			</div>
+		</nav>
+	</header>
+
+	<div id="call-btn" class="visible-xs">
+		<a class="btn" href="tel:410-602-5008">
+			<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+				<path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+			  </svg>
+		410-602-5008
+		</a>
+	  </div>
+	  <div id="xs-deliver" class="text-center visible-xs">* Spediamo</div>
+	
+
+
+	  <!--Tramite js il contenuto verrà modificato-->
+	  <div id="main-content" class="container">
+		
+
+	  </div>
+
+	  <footer class="panel-footer">
+		<div class="container">
+		  <div class="row">
+			<section id="hours" class="col-sm-4">
+			  <span>Orari:</span><br>
+			  Dom-Gio: 11:15am - 10:00pm<br>
+			  Ven: 11:15am - 2:30pm<br>
+			  Chiusi Sabato
+			  <hr class="visible-xs">
+			</section>
+			<section id="address" class="col-sm-4">
+			  <span>Indirizzo:</span><br>
+			  7105 Reisterstown Road<br>
+			  Baltimore, MD 21215
+			  <p>* Area di consegna entro 3-4 miglia, con ordine minimo di $ 20 più $ 3 di addebito per tutte le consegne.</p>
+			  <hr class="visible-xs">
+			</section>
+			<section id="testimonials" class="col-sm-4">
+			  <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+			  <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+			</section>
+		  </div>
+		  <div class="text-center">&copy; Copyright Robert Dache 2023</div>
+		</div>
+	  </footer>
+
+
+	  <script src="js/jquery-2.1.4.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/ajax-utils.js"></script>
+  <script src="js/script.js"></script>
+  
 </body>
 </html>
